#3738 fixed spacing of username

--- a/web/assets/css/header-css.css
+++ b/web/assets/css/header-css.css
@@ -224,11 +224,10 @@ header {
     font-size: 12px;
     margin-left: 17px;
     margin-top: 2px;
-    width: 24%;
 }
 
-.sticky-nav-fixed .header-text-container .new-user-nav-dropdown {
-    width: 100%;
+.sticky-nav-fixed .header-text-container .header-seller-name {
+    max-width: 130px;
 }
 
 .sticky-nav-fixed .header-text-container .new-user-nav-dropdown .default-nav-dropdown {
@@ -804,7 +803,7 @@ header {
     background-color: #4370cc;
     border-radius: 4px;
     color: #fff;
-    display: inline-block;
+    display: inline-block !important;
     padding: 4px 12px;
     text-align: center;
     width: 100%;
@@ -1055,11 +1054,6 @@ header {
     }
 }
 
-@media only screen and (max-width: 1184px) {
-    .sticky-nav-fixed .header-text-container {
-        width: 27%;
-    }
-}
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
@@ -1130,10 +1124,6 @@ header {
 
     #header .dropdown-menu > li > a {
         text-align:center;
-    }
-
-    #inner-header {
-        padding-top:75px;
     }
 
     #inner-header .header-inner-right {
@@ -1207,10 +1197,6 @@ header {
 
     .header-link .user-login-box {
         max-width: 230px;
-    }
-
-    .new-user-nav-dropdown {
-        display: block !important;
     }
 }
 
